[package]
name = "sss-x25519"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.72", features = ["backtrace"] }
crypto_box = { version = "0.9.0", features = ["std"] }
ed25519-compact = { version = "2.0.4", features = ["x25519"] }
gf256 = { version = "0.3.0", features = ["shamir", "thread-rng"] }
hex = "0.4.3"
rand = "0.8.5"
sha256 = "1.3.0"
