[package]
name = "sss-x25519"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.72", features = ["backtrace"] }
chrono = "0.4.26"
crypto_box = { version = "0.9.0", features = ["std"] }
ed25519-compact = { version = "2.0.4", features = ["x25519"] }
gf256 = { version = "0.3.0", features = ["shamir", "thread-rng"] }
hex = "0.4.3"
hmac = { version = "0.12.1", features = ["std"] }
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.181", features = ["derive"] }
serde_json = "1.0.104"
sha1 = "0.10.5"
sha256 = "1.3.0"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
urlencoding = "2.1.3"
